fixed overflowing text and card alignment on mobile

--- a/src/components/ContentCard.scss
+++ b/src/components/ContentCard.scss
@@ -24,7 +24,7 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     overflow: hidden;
-    margin-left: 16px;
+    margin-left: 20px;
 }
 
 .upper-container{
@@ -44,14 +44,14 @@
 }
 
 .userUpper-container{
-    height: 80px;
+    height: 70px;
     background:linear-gradient(to bottom, #0E6DD2, #2B7FDD, #4992E9,#66A4F4,#83B6FF);
 }
 
 .tag{
     display: flex;
     justify-content: center;
-    transform: translate(5px, 30px);
+    transform: translate(5px, 35px);
 }
 
 .image-container img{
@@ -59,17 +59,23 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    padding: 5px;
-    transform: translate(130px,45px);
+    padding: 2px;
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+    transform: translateY(45px);
 }
 
 .userImage-container img{
     background: white;
-    width: 70px;
-    height:70px;
+    width: 80px;
+    height:80px;
     border-radius: 50%;
-    padding: 5px;
-    transform: translate(48px, 30px);
+    padding: 2px;
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+    transform: translateY(20px);
 }
 
 
@@ -98,7 +104,7 @@
     background: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-
+    font-size: 16px;
 }
 
 button{
